Se añadio etiqueta meta keywords

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="es">        
     <head>
         <meta charset="UTF-8">
-       <meta name="description" content="Alterá comunidad/escuela de modelos">
+       <meta name="description" content="Alterá comunidad/escuela de modelos - Home">
+       <meta name="keywords" content="altera,comunidad de modelos,modelos,escuela de modelos,agencia de modelos,escuela de modelaje,modelaje,cursos modelaje,moda,moda chaco">
         <meta name="robots" content="index,follow">
         <title>Alterá - Comunidad/Escuela de modelos </title>
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -51,7 +52,7 @@
             </article> 
 
             <div id="flyerSintamosnosLibres" class="itemHome" >
-                <img src="img/photos/flyer1.PNG" alt="flyer">
+                <img id="imgLibres"src="img/photos/flyer1.PNG" alt="flyer">
             </div>
 
             <article id="mision" class="itemHome">
@@ -142,6 +143,7 @@
                         </ul>
                     </section> 
 
+
         </main>
 
         <footer id="pieDePagina"> 
@@ -149,7 +151,7 @@
             <div>
             <p> alteragencia.arg@gmail.com</p>
             <p>+ 54 9 362 5210433</p>
-            <p> Alberdi 1260. Resistencia, Chaco. Argentina.</p>
+            <p> Alberdi 1206. Resistencia, Chaco. Argentina.</p>
             <p>2021. ALTERÁ COMUNIDAD.</p>
             <p>TODOS LOS DERECHOS RESERVADOS ©</p>
             </div>
