--- a/staff.html
+++ b/staff.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
        <meta name="description" content="Alterá comunidad/escuela de modelos">
+       <meta name="keywords" content="altera,comunidad de modelos,modelos,agencia de modelos,modelaje,cursos modelaje,moda,moda chaco,staff modelos,equipo de trabajo,modelos Alterá">
         <meta name="robots" content="index,follow">
         <title>Alterá - Staff </title>
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -38,7 +39,7 @@
 
                     <div class="item elias">
                         <p class="negrita subrayado"> Elías Zalazar</p>
-                        <p class="negrita"> Co-fundador </p>
+                        <p class="negrita"> Director </p>
                          <img class="cofundadorFoto"  src="img/Photos/elias.jpg" alt="elias">
                         <P>Edad:25</P>
                         <P>Ciudad: Resistencia,Chaco </P>
@@ -46,28 +47,19 @@
 
                     <div class="item rachel">
                         <p class="negrita subrayado"> Rachel Zalazar </p>
-                       <p class="negrita"> Co-fundadora </p>
+                       <p class="negrita"> Directora </p>
                         <img class="cofundadorFoto"  src="img/Photos/rachel.jpg" alt="rachel">
                         <P> Edad:22</P>
                         <P> Ciudad: Resistencia, Chaco</P>
                     </div>
 
                     <div class="encabezadoItem">
-                        <h2 class="titulo">Modelos Embajadores</h2>
-                    </div>
-
-
-                    <div class="item nati">
-                        <p> Natalia Libutzki </p> 
-                        <p class="negrita"> Modelo</p>
-                        <img  src="img/Photos/nati.jpg" alt="nati">
-                        <p>Edad:22</p>  
-                        <p>Ciudad: Resistencia, Chaco</p>
+                        <h2 class="titulo">Modelos Representantes</h2>
                     </div>
 
                     <div class="item frangi">
                         <p> Agustín Frangi </p>
-                        <p class="negrita"> Modelo embajador de CABA </p>
+                        <p class="negrita"> Modelo representante de CABA </p>
                         <img src="img/Photos/frangi.jpg" alt="agus F">
                         <p>Edad:25</p>
                         <p>Ciudad: CABA</p>
@@ -75,7 +67,7 @@
 
                     <div class="item gabo">
                         <p> Gabo Vinitsky </p>
-                        <p class="negrita"> Modelo embajador de Pilar, BA </p>
+                        <p class="negrita"> Modelo representante de Pilar, BA </p>
                         <img src="img/Photos/gabo.jpg" alt="gabo">
                         <p>Edad: 24</p>
                         <p>Ciudad: Pilar, Buenos Aires</p>
@@ -83,7 +75,7 @@
 
                     <div class="item jose">
                         <p> José Yakisich </p>
-                        <p class="negrita"> Modelo embajador de Asunción,Paraguay</p>
+                        <p class="negrita"> Modelo representante de Asunción,Paraguay</p>
                          <img  src="img/Photos/josé.jpg" alt="jose">
                          <p> Edad:26</p>
                          <p> Ciudad: Asunción,Paraguay </p>
@@ -112,7 +104,8 @@
                 </div>
 
                  <section id="redesSocialesSeguinos">
-                    <h3>¡Seguinos!</h3>
+                    <h2>¡Seguinos!</h2>
+                    <h3>¡Seguinos en nuestras redes sociales!</h3>
                     <ul>
                         <li><a href="https://twitter.com/AlteraArg"><img class="iconosRedes" src="img/icono_twitt.jpg" alt="twitter icono"></a></li>
                         <li><a href="https://www.facebook.com/altera.arg/"><img class= "iconosRedes"src="img/icono_face.jpg" alt="facebook icono"></a></li>
@@ -124,8 +117,9 @@
                 <img id="logoAlteraPieDePag" src="img/Photos/logoAltera_pie_de_pag.jpg" alt="Logo Alterá">
                 <p> alteragencia.arg@gmail.com</p>
                 <p>+ 54 9 362 5210433</p>
-                <p> Alberdi 1260. Resistencia, Chaco. Argentina.</p>
-                <p>2021. ALTERÁ COMUNIDAD. TODOS LOS DERECHOS RESERVADOS ©</p>
+                <p> Alberdi 1206. Resistencia, Chaco. Argentina.</p>
+                <p>2021. ALTERÁ COMUNIDAD</p>
+                <p>TODOS LOS DERECHOS RESERVADOS ©</p>
            </footer>
      </body>
 </html>
