--- a/contacto.html
+++ b/contacto.html
@@ -2,7 +2,8 @@
 <html lang="es">        
     <head>
         <meta charset="UTF-8">
-       <meta name="description" content="Alterá comunidad/escuela de modelos">
+        <meta name="description" content="Alterá comunidad/escuela de modelos - Contacto">
+        <meta name="keywords" content="altera,comunidad de modelos,modelos,escuela de modelos,agencia de modelos,escuela de modelaje,modelaje,cursos modelaje,moda,moda chaco">
         <meta name="robots" content="index,follow">
         <title>Alterá - Contacto </title>
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -37,9 +38,9 @@
                         <div id="formSeccion1">
                             <label for="nombre">Nombre</label>
                             <input type="text" name="nombre"><br>
-                            <label for="correoElectrónico">Correo electrónico</label>
-                            <input type="email" name="CorreoElectrónico" ><br>
-                            <label for="asunto">Asunto</label>
+                            <label id="email" for="email">E-mail</label>
+                            <input type="email" name="email" ><br>
+                            <label id="asunto" for="asunto">Asunto</label>
                             <input list="asunto">
                             <datalist id="asunto">
                             <option value="Inscripcion"></option>
@@ -49,7 +50,6 @@
                         </div>
 
                         <div>
-                            <p>Mensaje</p>
                             <textarea id="mensaje"name="mensaje" id="" cols="450" rows="10" ></textarea>   
                         </div>
 
@@ -57,17 +57,21 @@
                             <p> ¿Desea recibir el newsletter?</p>
                             <input type="checkbox" name="acepta" value="1">
                         </div>
-
+    
                         <div class="botonesForm">
                         <input id="botonEnviar" type="button" value="Enviar">
                         <input id="botonBorrar" type="reset" value="Borrar todo">
                         </div>
+                        </section>
 
                     </form>
                     
-                    </section>
+
+
+
                     <section id="redesSocialesSeguinos">
-                        <h3>¡Seguinos!</h3>
+                        <h2>¡Seguinos!</h2>
+                        <h3>¡Seguinos en nuestras redes sociales!</h3>
                         <ul>
                             <li><a href="https://twitter.com/AlteraArg"><img class="iconosRedes" src="img/icono_twitt.jpg" alt="twitter icono"></a></li>
                             <li><a href="https://www.facebook.com/altera.arg/"><img class= "iconosRedes"src="img/icono_face.jpg" alt="facebook icono"></a></li>
@@ -79,8 +83,9 @@
                     <img id="logoAlteraPieDePag" src="img/Photos/logoAltera_pie_de_pag.jpg" alt="Logo Alterá">
                      <p> alteragencia.arg@gmail.com</p>
                      <p>+ 54 9 362 5210433</p>
-                     <p> Alberdi 1260. Resistencia, Chaco. Argentina.</p>
-                     <p>2021. ALTERÁ COMUNIDAD. TODOS LOS DERECHOS RESERVADOS ©</p>
+                     <p> Alberdi 1206. Resistencia, Chaco. Argentina.</p>
+                     <p>2021. ALTERÁ COMUNIDAD</p>
+                     <p>TODOS LOS DERECHOS RESERVADOS ©</p>
                 </footer>
      </body>
 </html>
