--- a/escuela.html
+++ b/escuela.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
        <meta name="description" content="Alterá comunidad/escuela de modelos">
+       <meta name="keywords" content="altera,comunidad de modelos,modelos,escuela de modelos,agencia de modelos,escuela de modelaje,modelaje,cursos modelaje,moda,moda chaco">
         <meta name="robots" content="index,follow">
         <title>Alterá - Escuela </title>
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -11,10 +12,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Roboto:wght@500&display=swap" rel="stylesheet">
-        <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-         />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet"> 
     </head>
     <body>
         <header>
@@ -36,17 +36,18 @@
         </header>
             <main>
                 <section>
-                   <h1 class="titulo">Escuela de Modelos Alterá</h1>
+                   <h1 class="titulo_Rosa">Escuela de Modelos Alterá</h1>
                    <p>En nuestra escuela de modelos incorporamos a cualquier persona sin ningún tipo de discriminación por edad, talle, etnia, género u orientación sexual. </p>
                    <p>Brindamos una formación integral como modelos profesionales a nuestros estudiantes así como también buscamos afianzar su seguridad en si mismos y promover el respeto por la diversidad. </p>
-                   <p>Son los mismos co-fundadores de Alterá, Rachel y Elías Zalazar, quienes disertan las clases y quienes además se encargan de generar experiencias reales y enriquecedoras a los estudiantes para que apliquen sus conocimientos teórico-prácticos modelando para diseñadores locales y asistiendo a importantes eventos de la región.</p>
+                   <p>Son los mismos directores de Alterá, Rachel y Elías Zalazar, quienes disertan las clases y quienes además se encargan de generar experiencias reales y enriquecedoras a los estudiantes para que apliquen sus conocimientos teórico-prácticos modelando para diseñadores locales y asistiendo a importantes eventos de la región.</p>
                    <p class="negrita"> Si estas interesado en formar parte del mundo de la moda ¡No esperes más! ¡Estudiá con nosotros!</p>
                    <p>Para más info ponete en contacto con nosotros a través de nuestras redes sociales o dirigite a la sección CONTACTO de nuestro web site.</p>
-                   <p class="titulo animate__animated animate__backInRight" >¡Te esperamos!</p>
+                   <p class=" titulo_Rosa animate__animated animate__backInRight" >¡Te esperamos!</p>
                  </section>
             
-                <section id="redesSocialesSeguinos">
-                    <h3>¡Seguinos!</h3>
+                 <section id="redesSocialesSeguinos">
+                    <h2>¡Seguinos!</h2>
+                    <h3>¡Seguinos en nuestras redes sociales!</h3>
                     <ul>
                         <li><a href="https://twitter.com/AlteraArg"><img class="iconosRedes" src="img/icono_twitt.jpg" alt="twitter icono"></a></li>
                         <li><a href="https://www.facebook.com/altera.arg/"><img class= "iconosRedes"src="img/icono_face.jpg" alt="facebook icono"></a></li>
@@ -58,8 +59,9 @@
                     <img id="logoAlteraPieDePag" src="img/Photos/logoAltera_pie_de_pag.jpg" alt="Logo Alterá">
                      <p> alteragencia.arg@gmail.com</p>
                      <p>+ 54 9 362 5210433</p>
-                     <p> Alberdi 1260. Resistencia, Chaco. Argentina.</p>
-                     <p>2021. ALTERÁ COMUNIDAD. TODOS LOS DERECHOS RESERVADOS ©</p>
+                     <p> Alberdi 1206. Resistencia, Chaco. Argentina.</p>
+                     <p>2021. ALTERÁ COMUNIDAD</p>
+                     <p>TODOS LOS DERECHOS RESERVADOS ©</p>
                 </footer>
      </body>
 </html>
