--- a/scouting.html
+++ b/scouting.html
@@ -2,7 +2,8 @@
 <html lang="es">        
     <head>
         <meta charset="UTF-8">
-        <meta name="description" content="Alterá comunidad/escuela de modelos">
+        <meta name="description" content="Alterá comunidad/escuela de modelos - Scouting">
+        <meta name="keywords" content="altera,comunidad de modelos,modelos,agencia de modelos,busqueda modelos,modelaje,moda,moda chaco,scouting modelos">
         <meta name="robots" content="index,follow">
         <title>Alterá - Scouting </title>
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -52,12 +53,14 @@
                 </section>
 
                 <section id="redesSocialesSeguinos">
-                    <h3>¡Seguinos!</h3>
+                    <h2>¡Seguinos!</h2>
+                    <h3>¡Seguinos en nuestras redes sociales!</h3>
                     <ul>
                         <li><a href="https://twitter.com/AlteraArg"><img class="iconosRedes" src="img/icono_twitt.jpg" alt="twitter icono"></a></li>
                         <li><a href="https://www.facebook.com/altera.arg/"><img class= "iconosRedes"src="img/icono_face.jpg" alt="facebook icono"></a></li>
                         <li><a href="https://www.instagram.com/altera.arg/?hl=en"><img class="iconosRedes" src="img/icono_insta.jpg" alt="icono instagram"> </a></li>
                     </ul>
+
                 </section>
 
 
@@ -66,8 +69,9 @@
                     <img id="logoAlteraPieDePag" src="img/Photos/logoAltera_pie_de_pag.jpg" alt="Logo Alterá">
                     <p> alteragencia.arg@gmail.com</p>
                     <p>+ 54 9 362 5210433</p>
-                    <p> Alberdi 1260. Resistencia, Chaco. Argentina.</p>
-                    <p>2021. ALTERÁ COMUNIDAD. TODOS LOS DERECHOS RESERVADOS ©</p>
+                    <p> Alberdi 1206. Resistencia, Chaco. Argentina.</p>
+                    <p>2021. ALTERÁ COMUNIDAD</p>
+                    <p>TODOS LOS DERECHOS RESERVADOS ©</p>
                 </footer>
      </body>
 </html>
