Correccion: Se quitaron etiquetas <p> dentro de las etiquetas <li> en el index.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">        
     <head>
         <meta charset="UTF-8">
-       <meta name="description" content="Alterá comunidad/escuela de modelos - Home">
+       <meta name="description" content="ALTERÁ es una comunidad de modelos que tiene por iniciativa promover y visibilizar cuerpos reales dentro del mundo de la moda, proponiendo una búsqueda de bellezas reales,fuera de la norma social.">
        <meta name="keywords" content="altera,comunidad de modelos,modelos,escuela de modelos,agencia de modelos,escuela de modelaje,modelaje,cursos modelaje,moda,moda chaco">
         <meta name="robots" content="index,follow">
         <title>Alterá - Comunidad/Escuela de modelos </title>
@@ -59,13 +59,13 @@
                 <h2 class="titulo">Misión</h2>
                 <ul>
                     <li>
-                        <p>• Promover la aceptación de la diversidad de cuerpos, géneros, talles y etnias dentro del mundo de la moda y en la sociedad en general.</p>
+                        • Promover la aceptación de la diversidad de cuerpos, géneros, talles y etnias dentro del mundo de la moda y en la sociedad en general.
                     </li>
                     <li>
-                        <p>• Ser conscientes y concientizar acerca del acoso y la discriminación.</p>
+                        • Ser conscientes y concientizar acerca del acoso y la discriminación.
                     </li>
                     <li>
-                        <p>• Mantener un ambiente laboral digno, saludable, libre de prejuicios y malos tratos.</p>
+                        • Mantener un ambiente laboral digno, saludable, libre de prejuicios y malos tratos.
                     </li>
                 </ul>
                 </article>
@@ -74,14 +74,13 @@
                 <h2 class="titulo">Visión</h2>
                 <ul>
                     <li>
-                        <p>• Trabajar con marcas de nivel nacional e internacional, exportando culturas, etnias, creencias y vivencias.
-                        </p>
+                        • Trabajar con marcas de nivel nacional e internacional, exportando culturas, etnias, creencias y vivencias.
                     </li>
                     <li>
-                        <p>• Relacionarnos en el ámbito de la moda, el arte y el diseño.</p>
+                        • Relacionarnos en el ámbito de la moda, el arte y el diseño.
                     </li>
                     <li>
-                        <p>• Trabajar con referentes nacionales e internacionales en nuestro ámbito de acción.</p>
+                        • Trabajar con referentes nacionales e internacionales en nuestro ámbito de acción.
                     </li>
                 </ul>
     
