--- a/contacto.html
+++ b/contacto.html
@@ -32,7 +32,7 @@
         </header>
             <main id="mainContacto">
                 <section>
-                    <h2 class= "titulo">Contactanos</h2>
+                    <h1 class= "titulo">Contactanos</h1>
                     <form  class="formulario" action="">
 
                         <div id="formSeccion1">
@@ -70,8 +70,8 @@
 
 
                     <section id="redesSocialesSeguinos">
-                        <h2>¡Seguinos!</h2>
-                        <h3>¡Seguinos en nuestras redes sociales!</h3>
+                        <h3 id="textDesk">¡Seguinos!</h3>
+                        <h3 id="textMobile">¡Seguinos en nuestras redes sociales!</h3>
                         <ul>
                             <li><a href="https://twitter.com/AlteraArg"><img class="iconosRedes" src="img/icono_twitt.jpg" alt="twitter icono"></a></li>
                             <li><a href="https://www.facebook.com/altera.arg/"><img class= "iconosRedes"src="img/icono_face.jpg" alt="facebook icono"></a></li>
