--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 
             <article id="nosotros" class="itemHome">
-                <h2 class="titulo">Sobre Nosotros</h2>
+                <h1 class="titulo">Sobre Nosotros</h1>
                 <p>ALTERA, surgió como un proyecto que tiene por iniciativa promover y visibilizar cuerpos reales dentro del mundo de la moda, proponiendo una búsqueda de nuevas bellezas, bellezas reales, distintas, fuera de la norma social.</p>
                 <p>Somos una agencia de modelos que propone un sentido de corporeidad diferente. Apoyamos  el libre desarrollo de las personas conforme a su identidad de género, alentamos el amor propio y amor al otro, desalentamos la envidia, el prejuicio, el desprecio y el odio.
                  Somos conscientes y queremos hacer conciencia.</p>
@@ -95,7 +95,7 @@
                <p class="epigrafe">Agustín Frangi, modelo embajador de Capital Federal </p>
             </div>
 
-            <h2 class="titulo galeria">Galeria de Imágenes</h2>
+            <h4 class="titulo galeria">Galeria de Imágenes</h3>
 
             <div id="demo" class="carousel slide" data-ride="carousel">
 
@@ -131,8 +131,8 @@
                     </div>
 
                     <section id="redesSocialesSeguinos">
-                        <h2>¡Seguinos!</h2>
-                        <h3>¡Seguinos en nuestras redes sociales!</h3>
+                        <h3 id="textDesk">¡Seguinos!</h3>
+                        <h3 id="textMobile">¡Seguinos en nuestras redes sociales!</h3>
                         <ul>
                             <li><a href="https://twitter.com/AlteraArg"><img class="iconosRedes" src="img/icono_twitt.jpg" alt="twitter icono"></a></li>
                             <li><a href="https://www.facebook.com/altera.arg/"><img class= "iconosRedes"src="img/icono_face.jpg" alt="facebook icono"></a></li>
