--- a/scouting.html
+++ b/scouting.html
@@ -53,8 +53,8 @@
                 </section>
 
                 <section id="redesSocialesSeguinos">
-                    <h2>¡Seguinos!</h2>
-                    <h3>¡Seguinos en nuestras redes sociales!</h3>
+                    <h3 id="textDesk">¡Seguinos!</h3>
+                    <h3 id="textMobile">¡Seguinos en nuestras redes sociales!</h3>
                     <ul>
                         <li><a href="https://twitter.com/AlteraArg"><img class="iconosRedes" src="img/icono_twitt.jpg" alt="twitter icono"></a></li>
                         <li><a href="https://www.facebook.com/altera.arg/"><img class= "iconosRedes"src="img/icono_face.jpg" alt="facebook icono"></a></li>
