--- a/staff.html
+++ b/staff.html
@@ -31,8 +31,8 @@
             </nav> 
         </header>
             <main>
+                <h1 class="titulo">Nuestro Staff</h1>
                 <div class="container">
-
                     <div class="encabezadoItem">
                         <h2 class="titulo">Co-Fundadores</h2> 
                     </div>
@@ -82,7 +82,7 @@
                     </div>
 
                     <div class="encabezadoItem">
-                        <h2 class="titulo">Modelos de nuestro staff</h2>
+                        <h2 class="titulo">Modelos del Staff</h2>
                     </div>
 
                     <div class="item">
@@ -104,8 +104,8 @@
                 </div>
 
                  <section id="redesSocialesSeguinos">
-                    <h2>¡Seguinos!</h2>
-                    <h3>¡Seguinos en nuestras redes sociales!</h3>
+                    <h3 id="textDesk">¡Seguinos!</h3>
+                    <h3 id="textMobile">¡Seguinos en nuestras redes sociales!</h3>
                     <ul>
                         <li><a href="https://twitter.com/AlteraArg"><img class="iconosRedes" src="img/icono_twitt.jpg" alt="twitter icono"></a></li>
                         <li><a href="https://www.facebook.com/altera.arg/"><img class= "iconosRedes"src="img/icono_face.jpg" alt="facebook icono"></a></li>
