--- a/staff.html
+++ b/staff.html
@@ -76,7 +76,7 @@
                     <div class="item jose">
                         <p> José Yakisich </p>
                         <p class="negrita"> Modelo representante de Asunción,Paraguay</p>
-                         <img  src="img/Photos/josé.jpg" alt="jose">
+                         <img  src="img/Photos/jose.jpg" alt="jose">
                          <p> Edad:26</p>
                          <p> Ciudad: Asunción,Paraguay </p>
                     </div>
@@ -107,9 +107,9 @@
                     <h3 id="textDesk">¡Seguinos!</h3>
                     <h3 id="textMobile">¡Seguinos en nuestras redes sociales!</h3>
                     <ul>
-                        <li><a href="https://twitter.com/AlteraArg"><img class="iconosRedes" src="img/icono_twitt.jpg" alt="twitter icono"></a></li>
-                        <li><a href="https://www.facebook.com/altera.arg/"><img class= "iconosRedes"src="img/icono_face.jpg" alt="facebook icono"></a></li>
-                        <li><a href="https://www.instagram.com/altera.arg/?hl=en"><img class="iconosRedes" src="img/icono_insta.jpg" alt="icono instagram"> </a></li>
+                        <li><a href="https://twitter.com/AlteraArg" target="_blank"><img class="iconosRedes" src="img/icono_twitt.jpg" alt="twitter icono"></a></li>
+                        <li><a href="https://www.facebook.com/altera.arg/" target="_blank"><img class= "iconosRedes"src="img/icono_face.jpg" alt="facebook icono"></a></li>
+                        <li><a href="https://www.instagram.com/altera.arg/?hl=en" target="_blank"><img class="iconosRedes" src="img/icono_insta.jpg" alt="icono instagram"> </a></li>
                     </ul>
                 </section>
             </main>
