Se añadieron <strong> en el index para resaltar palabras claves

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 
             <article id="nosotros" class="itemHome">
                 <h1 class="titulo">Sobre Nosotros</h1>
-                <p>ALTERA, surgió como un proyecto que tiene por iniciativa promover y visibilizar cuerpos reales dentro del mundo de la moda, proponiendo una búsqueda de nuevas bellezas, bellezas reales, distintas, fuera de la norma social.</p>
-                <p>Somos una agencia de modelos que propone un sentido de corporeidad diferente. Apoyamos  el libre desarrollo de las personas conforme a su identidad de género, alentamos el amor propio y amor al otro, desalentamos la envidia, el prejuicio, el desprecio y el odio.
-                 Somos conscientes y queremos hacer conciencia.</p>
-		        <p class="negrita"> ¿Y vos? ¿Te animás a mostrarte tal cual sos? </p>
+                <p> <strong>ALTERA</strong>, surgió como un proyecto que tiene por iniciativa promover y <strong> visibilizar cuerpos reales</strong> dentro del mundo de la moda, proponiendo una búsqueda de nuevas bellezas, bellezas reales, distintas, <strong> fuera de la norma social.</strong></p>
+                <p>Somos una <strong> agencia de modelos </strong> que propone un sentido de <strong>corporeidad diferente</strong>. Apoyamos  el <strong>libre desarrollo de las personas</strong> conforme a su identidad de género, alentamos el amor propio y el amor al otro, desalentamos la envidia, el prejuicio, el desprecio y el odio.
+                 Somos conscientes y <strong> queremos hacer conciencia</strong>.</p>
+		        <p> <strong> ¿Y vos? ¿Te animás a mostrarte tal cual sos?</strong> </p>
             </article> 
 
             <div id="flyerSintamosnosLibres" class="itemHome" >
