--- a/escuela.html
+++ b/escuela.html
@@ -41,7 +41,7 @@
                    <p>Brindamos una formación integral como modelos profesionales a nuestros estudiantes así como también buscamos afianzar su seguridad en si mismos y promover el respeto por la diversidad. </p>
                    <p>Son los mismos directores de Alterá, Rachel y Elías Zalazar, quienes disertan las clases y quienes además se encargan de generar experiencias reales y enriquecedoras a los estudiantes para que apliquen sus conocimientos teórico-prácticos modelando para diseñadores locales y asistiendo a importantes eventos de la región.</p>
                    <p class="negrita"> Si estas interesado en formar parte del mundo de la moda ¡No esperes más! ¡Estudiá con nosotros!</p>
-                   <p>Para más info ponete en contacto con nosotros a través de nuestras redes sociales o dirigite a la sección CONTACTO de nuestro web site.</p>
+                   <p>Para más info ponete en contacto con nosotros a través de nuestras redes sociales o dirigite a la sección <a href="contacto.html">CONTACTO</a> de nuestro web site.</p>
                    <p class=" titulo_Rosa animate__animated animate__backInRight" >¡Te esperamos!</p>
                  </section>
             
