--- a/index.html
+++ b/index.html
@@ -146,9 +146,10 @@
         <footer id="pieDePagina"> 
             <img id="logoAlteraPieDePag" src="img/Photos/logoAltera_pie_de_pag.jpg" alt="Logo Alterá">
             <div>
-            <p> alteragencia.arg@gmail.com</p>
-            <p>+ 54 9 362 5210433</p>
+            <a href="https://wa.me/message/RHKMM24KD5QTF1" target="_blank">+ 54 9 362 5210433</a>
+            <a href="mailto:alteragencia.arg@gmail.com" target="_blank">alteragencia.arg@gmail.com</a>
             <p> Alberdi 1206. Resistencia, Chaco. Argentina.</p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3540.2869504939044!2d-58.99934418494323!3d-27.46032458289493!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94450c91d9a1a899%3A0x76abc8f63d713edd!2sAv.%20Alberdi%201206%2C%20Resistencia%2C%20Chaco!5e0!3m2!1ses!2sar!4v1618968944974!5m2!1ses!2sar" width="300" height="225" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             <p>2021. ALTERÁ COMUNIDAD.</p>
             <p>TODOS LOS DERECHOS RESERVADOS ©</p>
             </div>
