Se modificaron medias querys

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 </div>
             </article>
 
-            <h4 class="titulo galeria">Galeria de Imágenes</h3>
+            <h4 class="titulo alinearCentro">Galeria de Imágenes</h4>
 
             <div id="demo" class="carousel slide" data-ride="carousel">
 
