Eliminación de html innecesario y modificacion de footer

--- a/contacto.html
+++ b/contacto.html
@@ -100,7 +100,7 @@
                     </section>
                 </main>
                 <footer id="pieDePagina"> 
-                    <img id="logoAlteraPieDePag" src="img/Photos/logoAltera_pie_de_pag.jpg" alt="Logo Alterá">
+                    <img id="logoAlteraPieDePag" src="img/Photos/LogoAlteraBlanco_sin_fondo.png" alt="Logo Alterá">
                     <ul id="vinculosFooter">
                         <li><a href="https://wa.me/message/RHKMM24KD5QTF1" target="_blank">WhatsApp: + 54 9 362 5210433</a></li>
                         <li><a href="mailto:alteragencia.arg@gmail.com" target="_blank">E-mail: alteragencia.arg@gmail.com</a></li>
