Se introducen tarjetas en Staff

--- a/staff.html
+++ b/staff.html
@@ -62,77 +62,131 @@
         </header>
             <main>
                 <h1 class="titulo">Nuestro Staff</h1>
-                <div class="container">
-                    <div class="encabezadoItem">
-                        <h2 class="titulo">Co-Fundadores</h2> 
-                    </div>
 
-                    <div class="item elias">
-                        <p class="negrita subrayado"> Elías Zalazar</p>
-                        <p class="negrita"> Director </p>
-                         <img class="cofundadorFoto"  src="img/Photos/elias.jpg" alt="elias">
-                        <P>Edad:25</P>
-                        <P>Ciudad: Resistencia,Chaco </P>
+                <div>
+                  <div class="card" style="width: 18rem;">
+                    <img src="img/Staff/elias.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="negrita subrayado"> Elías Zalazar</p>
+                      <p class="negrita"> Director </p>
+                      <P>Edad:25</P>
+                      <P>Ciudad: Resistencia,Chaco </P>
+                      <p class="card-text"></p>
                     </div>
+                  </div>
 
-                    <div class="item rachel">
-                        <p class="negrita subrayado"> Rachel Zalazar </p>
-                       <p class="negrita"> Directora </p>
-                        <img class="cofundadorFoto"  src="img/Photos/rachel.jpg" alt="rachel">
-                        <P> Edad:22</P>
-                        <P> Ciudad: Resistencia, Chaco</P>
+                  <div class="card" style="width: 18rem;">
+                    <img src="img/Staff/rachel.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="negrita subrayado"> Rachel Zalazar </p>
+                      <p class="negrita"> Directora </p>
+                      <P> Edad:22</P>
+                      <P> Ciudad: Resistencia, Chaco</P>
+                      <p class="card-text"></p>
                     </div>
+                  </div>
 
-                    <div class="encabezadoItem">
-                        <h2 class="titulo">Modelos Representantes</h2>
+                  <div class="card" style="width: 18rem;">
+                    <img src="img/Staff/frangi.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p> Agustín Frangi </p>
+                      <p class="negrita"> Modelo representante de CABA </p>
+                      <p>Edad:25</p>
+                      <p>Ciudad: CABA</p>
                     </div>
+                  </div>
 
-                    <div class="item frangi">
-                        <p> Agustín Frangi </p>
-                        <p class="negrita"> Modelo representante de CABA </p>
-                        <img src="img/Photos/frangi.jpg" alt="agus F">
-                        <p>Edad:25</p>
-                        <p>Ciudad: CABA</p>
+                  <div class="card" style="width: 18rem;">
+                    <img src="img/Staff/gabo.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p> Gabo Vinitsky </p>
+                      <p class="negrita"> Modelo representante de Pilar, BA </p>
+                      <p>Edad: 24</p>
+                      <p>Ciudad: Pilar, Buenos Aires</p>
                     </div>
+                  </div>
 
-                    <div class="item gabo">
-                        <p> Gabo Vinitsky </p>
-                        <p class="negrita"> Modelo representante de Pilar, BA </p>
-                        <img src="img/Photos/gabo.jpg" alt="gabo">
-                        <p>Edad: 24</p>
-                        <p>Ciudad: Pilar, Buenos Aires</p>
+                  <div class="card" style="width: 18rem;">
+                    <img src="img/Staff/sofiB.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p> Sofía Basile </p>
+                      <p class="negrita"> Modelo </p>
+                      <p>Edad:23</p>
+                      <p>Ciudad: San Telmo,Buenos Aires</p>
                     </div>
+                  </div>
 
-                    <div class="item jose">
-                        <p> José Yakisich </p>
-                        <p class="negrita"> Modelo representante de Asunción,Paraguay</p>
-                         <img  src="img/Photos/jose.jpg" alt="jose">
-                         <p> Edad:26</p>
-                         <p> Ciudad: Asunción,Paraguay </p>
+                  <div class="card" style="width: 18rem;">
+                    <img src="img/Staff/jose.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p> José Yakisich </p>
+                      <p class="negrita"> Modelo representante de Asunción,Paraguay</p>
+                      <p> Edad:26</p>
+                      <p> Ciudad: Asunción,Paraguay </p>
                     </div>
+                  </div>
 
-                    <div class="encabezadoItem">
-                        <h2 class="titulo">Modelos del Staff</h2>
+                  <div class="card" style="width: 18rem;">
+                    <img src="img/Staff/joel.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p> Joel Silveira Martinz</p>
+                      <p class="negrita"> Modelo </p>
+                      <p>Edad:26</p>
+                      <p>Ciudad: Aristóbulo del Valle, Misiones</p>
                     </div>
+                  </div>
 
-                    <div class="item">
-                        <p> Sofía Basile </p>
-                        <p class="negrita"> Modelo </p>
-                         <img  src="img/Photos/sofiB.jpg" alt="sofiB">
-                         <p>Edad:23</p>
-                         <p>Ciudad: San Telmo,Buenos Aires</p>
+                  <div class="card" style="width: 18rem;">
+                    <img src="img/Staff/annasilves.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p> Anna Silvestri</p>
+                      <p class="negrita"> Modelo </p>
+                      <p>Edad:25</p>
+                      <p>Ciudad: Resistencia,Chaco</p>
                     </div>
+                  </div>
 
-                    <div class="item">
-                        <p> Joel Silveira Martinz</p>
-                        <p class="negrita"> Modelo </p>
-                         <img  src="img/Photos/joel.jpg" alt="joel">
-                        <p>Edad:26</p>
-                        <p>Ciudad: Aristóbulo del Valle, Misiones</p>
+                  <div class="card" style="width: 18rem;">
+                    <img src="img/Staff/pedrolujan.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p> Pedro Luján</p>
+                      <p class="negrita"> Modelo </p>
+                      <p>Edad:27</p>
+                      <p>Ciudad: Resistencia, Chaco</p>
                     </div>
+                  </div>
 
+                  <div class="card" style="width: 18rem;">
+                    <img src="img/Staff/delfi.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p> Delfina Maldonado</p>
+                      <p class="negrita"> Modelo </p>
+                      <p>Edad:27</p>
+                      <p>Ciudad: Resistencia, Chaco</p>
+                    </div>
+                  </div>
+
+                  <div class="card" style="width: 18rem;">
+                    <img src="img/Staff/agus.jfif" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p> Agustina Benitez</p>
+                      <p class="negrita"> Modelo </p>
+                      <p>Edad:24</p>
+                      <p>Ciudad: Resistencia, Chaco</p>
+                    </div>
+                  </div>
+
+                  <div class="card" style="width: 18rem;">
+                    <img src="img/Staff/joaco.jfif" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p> Joaquín López Tersetti</p>
+                      <p class="negrita"> Modelo </p>
+                      <p>Edad:24</p>
+                      <p>Ciudad: Crespo, Entre Ríos</p>
+                    </div>
+                  </div>
                 </div>
-
+    
                  <section id="redesSocialesSeguinos">
                     <h3 id="textDesk">¡Seguinos!</h3>
                     <h3 id="textMobile">¡Seguinos en nuestras redes sociales!</h3>
