--- a/staff.html
+++ b/staff.html
@@ -61,13 +61,13 @@
               </nav>
         </header>
             <main>
-                <h1 class="titulo">Nuestro Staff</h1>
+                <h1 class="titulo alinearCentro">Nuestro Staff</h1>
 
-                <div>
+                <div class="container">
                   <div class="card" style="width: 18rem;">
                     <img src="img/Staff/elias.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p class="negrita subrayado"> Elías Zalazar</p>
+                      <p class="negrita"> Elías Zalazar</p>
                       <p class="negrita"> Director </p>
                       <P>Edad:25</P>
                       <P>Ciudad: Resistencia,Chaco </P>
@@ -78,7 +78,7 @@
                   <div class="card" style="width: 18rem;">
                     <img src="img/Staff/rachel.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p class="negrita subrayado"> Rachel Zalazar </p>
+                      <p class="negrita"> Rachel Zalazar </p>
                       <p class="negrita"> Directora </p>
                       <P> Edad:22</P>
                       <P> Ciudad: Resistencia, Chaco</P>
@@ -89,7 +89,7 @@
                   <div class="card" style="width: 18rem;">
                     <img src="img/Staff/frangi.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p> Agustín Frangi </p>
+                      <p class="negrita"> Agustín Frangi </p>
                       <p class="negrita"> Modelo representante de CABA </p>
                       <p>Edad:25</p>
                       <p>Ciudad: CABA</p>
@@ -99,7 +99,7 @@
                   <div class="card" style="width: 18rem;">
                     <img src="img/Staff/gabo.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p> Gabo Vinitsky </p>
+                      <p class="negrita"> Gabo Vinitsky </p>
                       <p class="negrita"> Modelo representante de Pilar, BA </p>
                       <p>Edad: 24</p>
                       <p>Ciudad: Pilar, Buenos Aires</p>
@@ -109,7 +109,7 @@
                   <div class="card" style="width: 18rem;">
                     <img src="img/Staff/sofiB.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p> Sofía Basile </p>
+                      <p class="negrita"> Sofía Basile </p>
                       <p class="negrita"> Modelo </p>
                       <p>Edad:23</p>
                       <p>Ciudad: San Telmo,Buenos Aires</p>
@@ -119,7 +119,7 @@
                   <div class="card" style="width: 18rem;">
                     <img src="img/Staff/jose.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p> José Yakisich </p>
+                      <p class="negrita"> José Yakisich </p>
                       <p class="negrita"> Modelo representante de Asunción,Paraguay</p>
                       <p> Edad:26</p>
                       <p> Ciudad: Asunción,Paraguay </p>
@@ -129,7 +129,7 @@
                   <div class="card" style="width: 18rem;">
                     <img src="img/Staff/joel.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p> Joel Silveira Martinz</p>
+                      <p class="negrita"> Joel Silveira Martinz</p>
                       <p class="negrita"> Modelo </p>
                       <p>Edad:26</p>
                       <p>Ciudad: Aristóbulo del Valle, Misiones</p>
@@ -139,7 +139,7 @@
                   <div class="card" style="width: 18rem;">
                     <img src="img/Staff/annasilves.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p> Anna Silvestri</p>
+                      <p class="negrita"> Anna Silvestri</p>
                       <p class="negrita"> Modelo </p>
                       <p>Edad:25</p>
                       <p>Ciudad: Resistencia,Chaco</p>
@@ -147,9 +147,9 @@
                   </div>
 
                   <div class="card" style="width: 18rem;">
-                    <img src="img/Staff/pedrolujan.jpg" class="card-img-top" alt="...">
+                    <img src="img/Carrusel/1-25.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p> Pedro Luján</p>
+                      <p class="negrita"> Pedro Luján</p>
                       <p class="negrita"> Modelo </p>
                       <p>Edad:27</p>
                       <p>Ciudad: Resistencia, Chaco</p>
@@ -159,7 +159,7 @@
                   <div class="card" style="width: 18rem;">
                     <img src="img/Staff/delfi.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p> Delfina Maldonado</p>
+                      <p class="negrita"> Delfina Maldonado</p>
                       <p class="negrita"> Modelo </p>
                       <p>Edad:27</p>
                       <p>Ciudad: Resistencia, Chaco</p>
@@ -169,7 +169,7 @@
                   <div class="card" style="width: 18rem;">
                     <img src="img/Staff/agus.jfif" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p> Agustina Benitez</p>
+                      <p class="negrita"> Agustina Benitez</p>
                       <p class="negrita"> Modelo </p>
                       <p>Edad:24</p>
                       <p>Ciudad: Resistencia, Chaco</p>
@@ -177,12 +177,22 @@
                   </div>
 
                   <div class="card" style="width: 18rem;">
-                    <img src="img/Staff/joaco.jfif" class="card-img-top" alt="...">
+                    <img src="img/Staff/joacolopez.jfif" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p> Joaquín López Tersetti</p>
+                      <p class="negrita"> Joaquín López Tersetti</p>
                       <p class="negrita"> Modelo </p>
                       <p>Edad:24</p>
                       <p>Ciudad: Crespo, Entre Ríos</p>
+                    </div>
+                  </div>
+
+                  <div class="card" style="width: 18rem;">
+                    <img src="img/Staff/romanoguera.jfif" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="negrita"> Romina Noguera </p>
+                      <p class="negrita"> Modelo </p>
+                      <p>Edad:26</p>
+                      <p>Ciudad: CABA</p>
                     </div>
                   </div>
                 </div>
