Se añade modelo del staff

--- a/staff.html
+++ b/staff.html
@@ -195,6 +195,17 @@
                       <p>Ciudad: CABA</p>
                     </div>
                   </div>
+
+                  <div class="card" style="width: 18rem;">
+                    <img src="img/Staff/einyel.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="negrita"> Einyel Zacarías </p>
+                      <p class="negrita"> Modelo </p>
+                      <p>Edad:25</p>
+                      <p>Ciudad: Resistencia, Chaco</p>
+                    </div>
+                  </div>
+
                 </div>
     
                  <section id="redesSocialesSeguinos">
